Bug 1500565 - Avoid start a fling animation with infinite velocity. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D9729